# services-test

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pre-commit-autoupdate.yml  release-please.yml  release.yml  requirements.txt
changelog/: index.html
cli/: index.html
docs/: changelog.md  cli.md  license.md
license/: index.html
search/: search_index.json
src/services_test/: __init__.py  __main__.py  cli.py
tests/: test_cli.py  test_lib.py  test_main.py
