[tool.poetry]
name = "services-test"
version = "2023.1.23"
authors = ["Heinz-Alexander Fuetterer <fuetterh@posteo.de>"]
description = "services-test"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/afuetterer/services-test"
repository = "https://github.com/afuetterer/services-test"
packages = [
    { include = "services_test", from = "src" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.23.3"
typer = ">=0.7.0"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
coverage = ">=7.1.0"
coverage-badge = ">=1.1.0"
pytest = ">=7.2.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.4.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.black]
# https://black.readthedocs.io/en/stable/usage_and_configuration
line-length = 100
target_version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
python_version = "3.8"
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
exclude = [".venv", ".tox"]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.coverage.run]
# https://coverage.readthedocs.io/en/7.0.5/config.html#configuration-reference
branch = true
parallel = true
source = ["src/services_test"]

[tool.coverage.paths]
source = [
  "src/services_test",
  "*/site-packages/services_test",
  "*/src/services_test"
]

[tool.coverage.report]
fail_under = 100
# skip_covered = true
skip_empty = true

[tool.ruff]
# https://github.com/charliermarsh/ruff#configuration
line-length = 100
select = ["B", "E", "F", "I", "S", "UP"]
src = ["src", "tests"]
# Always autofix, but never try to fix "F401" (unused imports).
fix = true
unfixable = ["F401"]
target-version = "py38"

[tool.ruff.per-file-ignores]
# https://github.com/charliermarsh/ruff#flake8-bandit-s
# ignore "S101" (assert-used) in test files
"test_*.py" = ["S101"]

[tool.ruff.isort]
# https://github.com/charliermarsh/ruff#isort
known-first-party = ["services_test", "tests"]

[tool.ruff.pyupgrade]
# https://github.com/charliermarsh/ruff#pyupgrade
keep-runtime-typing = true
